# fingera_header

./: .gitmodules  CMakeLists.txt  README.md
include/fingera/: header.h  pack.hpp  reflect.hpp  stream.hpp
include/fingera/header/: cleanse.h  compiler.h  endian.h  language.h  os.h  stdint.h  utility.h
src/: dummy.c
tests/: CMakeLists.txt  test_header.cpp  test_reflect.cpp
